# Babel

./: .gitignore  .justfile  Cargo.toml  README.md  ROADMAP.txt  binding.toml  config.toml  go.mod  go.sum  main.go  main.py  trigger.toml
.just/: go.conf
cmd/: cmdCompletion.go  cmdCompose.go  cmdConstruct.go  cmdDisplay.go  cmdDocument.go  cmdEmbed.go  cmdIdentity.go  cmdInterpret.go  cmdKey.go  cmdParseEDN.go  doc.go  docs.json  root.go  typeParams.go  typeRep.go  util.go  utilCompose.go  utilConstruct.go  utilDisplay.go  utilEmbed.go  utilExample.go  utilFindHome.go  utilForge.go  utilForger.go  utilHelp.go  utilIO.go  utilInterpret.go  utilLookups.go  utilParse.go  utilParser.go  utilReplace.go  utilReps.go
config/: config.toml  display_binding.toml  display_trigger.toml  embed.toml  interpret.toml
src/: cli.rs  cmd.rs  cmds.rs  edn.rs  forge.rs  forger.rs  lookup.rs  main.rs  parse.rs  util.rs
src/cmd/: compose.rs  construct.rs  display.rs  embed.rs  interpret.rs
src/cmds/: completion.rs  compose.rs  construct.rs  display.rs  embed.rs  identity.rs  interpret.rs
src/parse/: edn.rs
