[package]
name = "babel"
version = "0.1.0"
authors = ["Daniel Rivas <danielrivasmd@gmail.com>"]
repository = "https://github.com/DanielRivasMD/Babel"
keywords = []
categories = []
readme = "README.md"
description = ""
edition = "2024"


[dependencies]
issac = { path = "../issac" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3"
dirs = "6"
edn = "0.3"
once_cell = "1"
regex = "1"
toml = "1"
walkdir = "2"
